updating code adding logo

--- a/example/simple.html
+++ b/example/simple.html
@@ -43,13 +43,13 @@
             <div id="status">Initializing...</div>
             <div id="error"></div>
             <video id="video" width="640" height="480" autoplay style="display: none;"></video>
-            <canvas id="output_canvas" width="640" height="480" ></canvas>
         </div>
     </div>
 
     <!-- Load MediaPipe library with version check -->
     <script src="https://cdn.jsdelivr.net/npm/heatmap.js@2.0.5/build/heatmap.min.js"></script>
-    <script src="eyegestures.min.js"></script>
+    <script src="../src/calibration.js"></script>
+    <script src="../src/eyegestures.js"></script>
     <script>
 
         // Initialize heatmap
